[package]
name = "clip_cropper"
version = "0.1.0"
description = "Single-clip crop and trim editor"
authors = ["delay"]
edition = "2021"

[lib]
name = "clip_cropper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tempfile = "3"
